--- a/sum_product.ipynb
+++ b/sum_product.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,32 +46,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "isinstance(np.array([]), np.ndarray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Variable:\n",
     "    def __init__(self, name, n_states):\n",
     "        self.name = name\n",
-    "        self.states = list(range(n_states))"
+    "        self.states = list(range(n_states))\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return self.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Factor:\n",
     "    def __init__(self, name, array):\n",
+    "        assert isinstance(array, np.ndarray), f'´array has to be a numpy ndarray, not {type(array)}'\n",
     "        self.name = name\n",
     "        self.values = array\n",
-    "        self.shape  = self.values.shape"
+    "        self.shape  = self.values.shape\n",
+    "    \n",
+    "    def __repr__(self):\n",
+    "        return self.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "´array has to be a numpy ndarray, not <class 'list'>",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-34-b854d017bc81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFactor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'f12'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-33-23f9f67d40c9>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, array)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mFactor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'´array has to be a numpy ndarray, not {type(array)}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: ´array has to be a numpy ndarray, not <class 'list'>"
+     ]
+    }
+   ],
+   "source": [
+    "f = Factor('f12', [])\n",
+    "isinstance(f, Variable)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,6 +150,22 @@
     "            self.var_factors[variable.name] = []\n",
     "        self.factor_vars[factor].append(variable)\n",
     "        self.var_factors[variable.name].append(self.factors[factor])\n",
+    "    \n",
+    "    def neighbours(self, entity):\n",
+    "        if isinstance(entity, Variable):\n",
+    "            return self._var_neighbours(entity)\n",
+    "        elif isinstance(entity, Factor):\n",
+    "            return self._factor_neighbours(entity)\n",
+    "        else:\n",
+    "            assert False, f'Illegal type {type(entity)}'\n",
+    "    \n",
+    "    def _var_neighbours(self, var):\n",
+    "        assert var.name in self.var_factors, f'unknown variable {var.name}'\n",
+    "        return self.var_factors[var.name]\n",
+    "    \n",
+    "    def _factor_neighbours(self, factor):\n",
+    "        assert factor.name in self.factor_vars, f'unknown factor {factor.name}'\n",
+    "        return self.factor_vars[factor.name]\n",
     "        \n",
     "    \n",
     "    def compute_marginals(self):\n",
@@ -108,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +212,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[f12]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "g.neighbours(x1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -209,16 +295,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'f12': <__main__.Factor at 0x7f30d7c5d8d0>}"
+       "{'f1': f1, 'f2': f2, 'f3': f3, 'f4': f4}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,22 +315,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x2\n",
-      "x1\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[C]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for var in g.factor_vars['f12']:\n",
-    "    print(var.name)"
+    "g.neighbours(f4)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -263,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
