--- a/sum_product.ipynb
+++ b/sum_product.ipynb
@@ -66,126 +66,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Variable:\n",
-    "    def __init__(self, name, n_states):\n",
-    "        self.name = name\n",
-    "        self.states = list(range(n_states))\n",
-    "    \n",
-    "    def __repr__(self):\n",
-    "        return self.name"
+    "class Message:\n",
+    "    def __init__(self, origin, dest, values):\n",
+    "        self.origin = origin\n",
+    "        self.dest = dest\n",
+    "        self.values = values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Factor:\n",
-    "    def __init__(self, name, array):\n",
-    "        assert isinstance(array, np.ndarray), f'´array has to be a numpy ndarray, not {type(array)}'\n",
+    "class Node:\n",
+    "    def __init__(self, name):\n",
     "        self.name = name\n",
-    "        self.values = array\n",
-    "        self.shape  = self.values.shape\n",
+    "        self.neighbors = []\n",
+    "        self.messages = []\n",
     "    \n",
     "    def __repr__(self):\n",
-    "        return self.name"
+    "        return self.name\n",
+    "    \n",
+    "    def add_neighbor(self, factor):\n",
+    "        self.neighbors.append(factor)\n",
+    "    \n",
+    "    def send_message(self):\n",
+    "        # when node is requested to send message and list of incoming messages is empty,\n",
+    "        # this means that node is leaf node and most use init message\n",
+    "        if len(self.messages) == 0:\n",
+    "            message = np.ones(len(self.states)) if isinstance(self, Variable) else self.values\n",
+    "            for node in self.neighbors:\n",
+    "                node.messages.append(Message(self, node, message))\n",
+    "                print(f'Node {self.name} sends message to node {node.name}')\n",
+    "            return self.neighbors # return all neighbors\n",
+    "        else: # not a leaf\n",
+    "            in_values= [message.values for message in self.messages]\n",
+    "            in_nodes = [message.origin for message in self.messages]\n",
+    "            out_nodes = [node for node in self.neighbors if node not in in_nodes]\n",
+    "            for node in out_nodes:\n",
+    "                print(f'Node {self.name} sends message to node {node.name}')\n",
+    "                if isinstance(self, Variable):\n",
+    "                    # from variable to factor: product of all in messages:\n",
+    "                    message = np.prod(in_values, axis=0)\n",
+    "                    node.messages.append(Message(self, node, message))\n",
+    "                else: # factor node\n",
+    "                    pass\n",
+    "            return out_nodes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 296,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "´array has to be a numpy ndarray, not <class 'list'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-34-b854d017bc81>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mFactor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'f12'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVariable\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-33-23f9f67d40c9>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, name, array)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mFactor\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m         \u001b[0;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'´array has to be a numpy ndarray, not {type(array)}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0marray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: ´array has to be a numpy ndarray, not <class 'list'>"
-     ]
+     "data": {
+      "text/plain": [
+       "array([6., 6., 6.])"
+      ]
+     },
+     "execution_count": 296,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "f = Factor('f12', [])\n",
-    "isinstance(f, Variable)"
+    "one1 = 3*np.ones(3)\n",
+    "one2 = 2*np.ones(3)\n",
+    "np.prod([one1, one2], axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 297,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Variable(Node):\n",
+    "    def __init__(self, name, n_states):\n",
+    "        super().__init__(name)\n",
+    "        self.states = list(range(n_states))    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Factor(Node):\n",
+    "    def __init__(self, name, array):\n",
+    "        super().__init__(name)\n",
+    "        assert isinstance(array, np.ndarray), f'´array has to be a numpy ndarray, not {type(array)}'\n",
+    "        self.values = array\n",
+    "        self.shape  = self.values.shape\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
    "metadata": {},
    "outputs": [],
    "source": [
     "class FactorGraph:\n",
     "    def __init__(self):\n",
-    "        self.nodes = {}\n",
-    "        self.factors = {}\n",
-    "        self.factor_vars = {}\n",
-    "        self.vars = {}\n",
-    "        self.var_factors = {}\n",
+    "        self.factors = []\n",
+    "        self.vars = []\n",
     "    \n",
     "    def add(self, factor):\n",
     "        \"\"\"Add a factor to the graph\"\"\"\n",
-    "        assert factor.name not in self.factors, f'Factor with name {factor.name} already defined'\n",
-    "        self.factors[factor.name] = factor\n",
-    "        self.factor_vars[factor.name] = []\n",
+    "        assert factor not in self.factors, f'Factor {factor.name} already defined'\n",
+    "        self.factors.append(factor)\n",
     "    \n",
     "    def append(self, factor, variable):\n",
     "        \"\"\"Add a variable to factor\"\"\"\n",
-    "        assert factor in self.factors, f'Factor {factor} not yet defined'\n",
-    "        expected_size = self.factors[factor].shape[len(self.factor_vars[factor])]\n",
-    "        print(f'Expected size = {expected_size}, true size = {len(variable.states)}')\n",
-    "        assert expected_size == len(variable.states)\n",
-    "        if variable.name not in self.vars:\n",
-    "            self.vars[variable.name] = variable\n",
-    "            self.var_factors[variable.name] = []\n",
-    "        self.factor_vars[factor].append(variable)\n",
-    "        self.var_factors[variable.name].append(self.factors[factor])\n",
-    "    \n",
-    "    def neighbours(self, entity):\n",
-    "        if isinstance(entity, Variable):\n",
-    "            return self._var_neighbours(entity)\n",
-    "        elif isinstance(entity, Factor):\n",
-    "            return self._factor_neighbours(entity)\n",
-    "        else:\n",
-    "            assert False, f'Illegal type {type(entity)}'\n",
-    "    \n",
-    "    def _var_neighbours(self, var):\n",
-    "        assert var.name in self.var_factors, f'unknown variable {var.name}'\n",
-    "        return self.var_factors[var.name]\n",
-    "    \n",
-    "    def _factor_neighbours(self, factor):\n",
-    "        assert factor.name in self.factor_vars, f'unknown factor {factor.name}'\n",
-    "        return self.factor_vars[factor.name]\n",
-    "        \n",
+    "        assert factor in self.factors, f'Factor {factor.name} not yet defined'\n",
+    "        # TODO: check for correct size\n",
+    "        if variable not in self.vars:\n",
+    "            self.vars.append(variable)\n",
+    "        factor.add_neighbor(variable)\n",
+    "        variable.add_neighbor(factor)\n",
+    "\n",
+    "    def leafs(self):\n",
+    "        leafs = set()\n",
+    "        for node in self.vars + self.factors:\n",
+    "            # a leaf is a node that is missing one incoming message\n",
+    "            if len(node.neighbors) == 1:\n",
+    "                leafs.add(node)\n",
+    "        return leafs\n",
     "    \n",
     "    def compute_marginals(self):\n",
-    "        pass"
+    "        leafs = self.leafs()\n",
+    "        # 1. pick (arbitrary) root node\n",
+    "        #root = leafs.pop()\n",
+    "        root = self.factors[-1] # force uses of  as root - remove later\n",
+    "        leafs.remove(root)\n",
+    "        # 2. Propagate messages from leaves to root\n",
+    "        fringe = leafs.copy()\n",
+    "        for node in fringe:\n",
+    "            next_nodes = node.send_message()\n",
+    "            fringe = fringe.union(next_nodes)\n",
+    "            fringe.remove(node)\n",
+    "                    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 300,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Expected size = 3, true size = 3\n",
-      "Expected size = 2, true size = 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## test\n",
     "g = FactorGraph()\n",
@@ -201,8 +235,8 @@
     "\n",
     "# connect the parents to their children\n",
     "g.add(f12)\n",
-    "g.append('f12', x2) # order must be the same as dimensions in factor potential!\n",
-    "g.append('f12', x1) # note: f12 potential's shape is (3,2), i.e. (x2,x1)\n",
+    "g.append(f12, x2) # order must be the same as dimensions in factor potential!\n",
+    "g.append(f12, x1) # note: f12 potential's shape is (3,2), i.e. (x2,x1)\n",
     "\n",
     "#g.compute_marginals() # -> [0.0]\n",
     "\n",
@@ -212,43 +246,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 301,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[f12]"
+       "{x1, x2}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 301,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.neighbours(x1)"
+    "g.leafs()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 302,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Expected size = 2, true size = 2\n",
-      "Expected size = 2, true size = 2\n",
-      "Expected size = 2, true size = 2\n",
-      "Expected size = 2, true size = 2\n",
-      "Expected size = 2, true size = 2\n",
-      "Expected size = 2, true size = 2\n",
-      "Expected size = 2, true size = 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## second test\n",
     "g = FactorGraph()\n",
@@ -278,33 +298,33 @@
     "))\n",
     "\n",
     "g.add(f1)\n",
-    "g.append('f1', A)\n",
-    "g.append('f1', B)\n",
+    "g.append(f1, A)\n",
+    "g.append(f1, B)\n",
     "\n",
     "g.add(f2)\n",
-    "g.append('f2', B)\n",
-    "g.append('f2', C)\n",
+    "g.append(f2, B)\n",
+    "g.append(f2, C)\n",
     "\n",
     "g.add(f3)\n",
-    "g.append('f3', B)\n",
-    "g.append('f3', D)\n",
+    "g.append(f3, B)\n",
+    "g.append(f3, D)\n",
     "\n",
     "g.add(f4)\n",
-    "g.append('f4', C)"
+    "g.append(f4, C)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'f1': f1, 'f2': f2, 'f3': f3, 'f4': f4}"
+       "[f1, f2, f3, f4]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,30 +335,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Node D sends message to node f3\n",
+      "Node A sends message to node f1\n"
+     ]
+    }
+   ],
+   "source": [
+    "g.compute_marginals()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[C]"
+       "array([1., 1.])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 279,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "g.neighbours(f4)"
+    "f3.messages[0].array"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
