--- a/sum_product.ipynb
+++ b/sum_product.ipynb
@@ -370,6 +370,46 @@
    "source": [
     "f3.messages[0].array"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 306,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = set(); a.add(1)\n",
+    "b = set(); b.add(1)\n",
+    "c = set([1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 315,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a  = a.union([2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{2}"
+      ]
+     },
+     "execution_count": 317,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.difference(b)"
+   ]
   }
  ],
  "metadata": {
