implemented alpha-beta recursion

--- a/try_out.ipynb
+++ b/try_out.ipynb
@@ -28,18 +28,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from gridworld import GridWorld, make_beliefnet\n",
-    "from belief_networks import make_factor_graph"
+    "from belief_networks import make_factor_graph, order_beliefnet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,53 +51,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def order(beliefnet):\n",
-    "    order = {}\n",
-    "    to_do = beliefnet[:]\n",
-    "    done  = []\n",
-    "    next_nodes = [n for n in to_do if n.parents is None]\n",
-    "    counter = 0\n",
-    "    while to_do:\n",
-    "        order[counter] = next_nodes[:]\n",
-    "        for node in next_nodes:\n",
-    "            to_do.remove(node)\n",
-    "            done.append(node)\n",
-    "        next_nodes = [n for n  in to_do if all([p in done for p in n.parents])]\n",
-    "        counter += 1\n",
-    "    return order\n",
-    "ordered_net = order(beliefnet)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "0 -> [s0, a0, a1, a2]\n1 -> [o0, s1]\n2 -> [o1, s2]\n3 -> [o2]\n"
+      "Level 0 -> [s0, a0, a1, a2]\nLevel 1 -> [o0, s1]\nLevel 2 -> [o1, s2]\nLevel 3 -> [o2]\n"
      ]
     }
    ],
    "source": [
+    "ordered_net = order_beliefnet(beliefnet)\n",
     "for key in ordered_net:\n",
-    "    print(key, '->', ordered_net[key])"
+    "    print(f'Level {key} -> {ordered_net[key]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.07142857, 0.07142857, 0.07142857, 0.07142857,\n",
+       "       0.07142857, 0.07142857, 0.07142857, 0.07142857, 0.07142857,\n",
+       "       0.07142857, 0.07142857, 0.07142857, 0.07142857, 0.07142857,\n",
+       "       0.        ])"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 4
+    }
+   ],
+   "source": [
+    "beliefnet[0].table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "o2"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "factor_graph.vars[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "AssertionError",
+     "evalue": "Proposed root node s0 not in leafs: [fs0, o2, fa1, fa0, o1, fa2, o0]",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-79801dc90e10>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mfactor_graph\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmake_factor_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbeliefnet\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfactor_graph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcompute_messages\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfactor_graph\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvars\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/Programming/prob_inference/sum_product.py\u001b[0m in \u001b[0;36mcompute_messages\u001b[0;34m(self, root)\u001b[0m\n\u001b[1;32m    182\u001b[0m         \u001b[0;31m# 1. pick (arbitrary?) root node\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    183\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mroot\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 184\u001b[0;31m             \u001b[0;32massert\u001b[0m \u001b[0mroot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mleafs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34mf'Proposed root node {root} not in leafs: {leafs}'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    185\u001b[0m             \u001b[0mleafs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mroot\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    186\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: Proposed root node s0 not in leafs: [fs0, o2, fa1, fa0, o1, fa2, o0]"
+     ]
+    }
+   ],
    "source": [
     "factor_graph = make_factor_graph(beliefnet)\n",
-    "factor_graph.compute_messages()"
+    "factor_graph.compute_messages(root=factor_graph.vars[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "s0: {fs0: Message from fs0 to s0: [0.         0.07142857 0.07142857 0.07142857 0.07142857 0.07142857\n 0.07142857 0.07142857 0.07142857 0.07142857 0.07142857 0.07142857\n 0.07142857 0.07142857 0.07142857 0.        ]}\na0: {fa0: Message from fa0 to a0: [0.25 0.25 0.25 0.25]}\na1: {fa1: Message from fa1 to a1: [0.25 0.25 0.25 0.25]}\na2: {fa2: Message from fa2 to a2: [0.25 0.25 0.25 0.25]}\no0: {}\ns1: {}\no1: {}\ns2: {fo2: Message from fo2 to s2: [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]}\no2: {}\nfs0: {}\nfa0: {}\nfa1: {}\nfa2: {}\nfo0: {o0: Message from o0 to fo0: [1. 1.]}\nfs1: {}\nfo1: {o1: Message from o1 to fo1: [1. 1.]}\nfs2: {s2: Message from s2 to fs2: [1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1. 1.]}\nfo2: {o2: Message from o2 to fo2: [1. 1.], a2: Message from a2 to fo2: [0.25 0.25 0.25 0.25]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for node in factor_graph.vars + factor_graph.factors:\n",
+    "    print(f'{node}: {node.messages}')"
    ]
   },
   {
@@ -160,30 +212,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[s0, a0, a1, a2, s1, o0, s2, o1, o2]\na2\n"
+      "[s0, a0, a1, a2, s1, o0, s2, o1, o2]\ns0\n"
      ]
     },
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{fa2: Message from fa2 to a2: [0.25 0.25 0.25 0.25]}"
+       "{fs0: Message from fs0 to s0: [[[1. 0. 0. ... 0. 0. 0.]\n",
+       "   [0. 1. 0. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 0.]\n",
+       "   [1. 0. 0. ... 0. 0. 0.]]\n",
+       " \n",
+       "  [[0. 1. 0. ... 0. 0. 0.]\n",
+       "   [0. 0. 1. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 0.]\n",
+       "   [1. 0. 0. ... 0. 0. 0.]]\n",
+       " \n",
+       "  [[0. 0. 1. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 0.]\n",
+       "   [0. 1. 0. ... 0. 0. 0.]]\n",
+       " \n",
+       "  ...\n",
+       " \n",
+       "  [[0. 0. 0. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 1. 0.]\n",
+       "   [0. 0. 0. ... 1. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 0.]]\n",
+       " \n",
+       "  [[0. 0. 0. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 1.]\n",
+       "   [0. 0. 0. ... 0. 1. 0.]\n",
+       "   [0. 0. 0. ... 1. 0. 0.]]\n",
+       " \n",
+       "  [[0. 0. 0. ... 0. 0. 0.]\n",
+       "   [0. 0. 0. ... 0. 0. 1.]\n",
+       "   [0. 0. 0. ... 0. 0. 1.]\n",
+       "   [0. 0. 0. ... 0. 1. 0.]]]}"
       ]
      },
      "metadata": {},
-     "execution_count": 63
+     "execution_count": 125
     }
    ],
    "source": [
     "print(factor_graph.vars)\n",
-    "N = 3\n",
+    "N = 0\n",
     "print(factor_graph.vars[N])\n",
     "factor_graph.vars[N].messages"
    ]
