--- a/try_out.ipynb
+++ b/try_out.ipynb
@@ -455,6 +455,41 @@
     "print([int(n.name[1:]) for n in beliefnet])\n",
     "beliefnet = sorted(beliefnet, key=lambda n: int(n.name[1:]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def state_to_pos(state, env):\n",
+    "    \"state = pos linearly\"\n",
+    "    #m, n = env.start_grid_map.shape\n",
+    "    m, n = env\n",
+    "    pos0 = state // m\n",
+    "    pos1 = state % n\n",
+    "    return pos0, pos1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(2, 3)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "state_to_pos(35, (16, 16))\n"
+   ]
   }
  ]
 }
